--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"token": "NDc3MTkzNTM1NzMzMzY2ODA0.DlOWWA.2qc_7y5qu-ddMUXa2GPpKcEqICA",
-	"prefix": "!",
+	"token": "NDc4MTEyMjU4MDQ0NDYxMDc4.DlOnzw.BUpPdwHibOsWi2Q1su2fCsjoPN4",
+	"prefix": "4",
 	"ytApiKey": "AIzaSyAdORXg7UZUo7sePv97JyoDqtQVi3Ll0b8"
 }
